[flake8]
doctests = True
max-complexity = 10

[metadata]
author = Kon
description = Preparation tools for machine learning
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
name = pretools

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    numpy
    pandas
    scikit-learn
    tqdm
packages = find:
python_requires = >=3.5

[options.extras_require]
testing =
  catboost

[options.packages.find]
exclude = tests

[pydocstyle]
convention = numpy

[tool:pytest]
addopts =
  --black
  --cov=./
  --cov-report=xml
  --doctest-modules
  --flake8
  --mypy
  --pydocstyle
