[aliases]
test = pytest

[flake8]
doctests = True
extend-ignore = E203, W503
max-complexity = 10

[metadata]
author = Kon
description = Preparation tools for machine learning
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
name = pretools

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    jax
    jaxlib
    numpy
    pandas
    scikit-learn<0.24
    scipy
    tqdm
packages = find:
python_requires = >=3.6
setup_requires =
    pytest-runner
    setuptools_scm
tests_require =
  pytest
  pytest-flake8
  pytest-mypy
  pytest-pydocstyle>=2.0.0

[options.extras_require]
develop =
  catboost

[options.packages.find]
exclude = tests

[pydocstyle]
convention = numpy

[tool:pytest]
addopts =
    --doctest-modules
    --flake8
    --mypy
    --pydocstyle
